datasets/dataset_txt/scrapy/scrapy_242.txt
Naba7 commented on Dec 14, 2018
Traceback (most recent call last):
File "/home/chad7/ENV/bin/scrapy", line 11, in
sys.exit(execute())
File "/home/chad7/ENV/lib/python3.6/site-packages/scrapy/cmdline.py", line 149, in execute
cmd.crawler_process = CrawlerProcess(settings)
File "/home/chad7/ENV/lib/python3.6/site-packages/scrapy/crawler.py", line 249, in init
super(CrawlerProcess, self).init(settings)
File "/home/chad7/ENV/lib/python3.6/site-packages/scrapy/crawler.py", line 137, in init
self.spider_loader = _get_spider_loader(settings)
File "/home/chad7/ENV/lib/python3.6/site-packages/scrapy/crawler.py", line 336, in _get_spider_loader
return loader_cls.from_settings(settings.frozencopy())
File "/home/chad7/ENV/lib/python3.6/site-packages/scrapy/spiderloader.py", line 61, in from_settings
return cls(settings)
File "/home/chad7/ENV/lib/python3.6/site-packages/scrapy/spiderloader.py", line 25, in init
self._load_all_spiders()
File "/home/chad7/ENV/lib/python3.6/site-packages/scrapy/spiderloader.py", line 47, in _load_all_spiders
for module in walk_modules(name):
File "/home/chad7/ENV/lib/python3.6/site-packages/scrapy/utils/misc.py", line 71, in walk_modules
submod = import_module(fullpath)
File "/home/chad7/ENV/lib/python3.6/importlib/init.py", line 126, in import_module
return _bootstrap._gcd_import(name[level:], package, level)
File "", line 994, in _gcd_import
File "", line 971, in _find_and_load
File "", line 955, in _find_and_load_unlocked
File "", line 665, in _load_unlocked
File "", line 674, in exec_module
File "", line 781, in get_code
File "", line 741, in source_to_code
File "", line 219, in _call_with_frames_removed
File "/home/chad7/tutorial/tutorial/spiders/quote_spider.py", line 18
~
^
SyntaxError: invalid syntax